# VideoBrightener

./: .gitignore  CMakeLists.txt  README.md
include/: video_brightener.h  video_player.h
src/: main.cpp  video_brightener.cpp  video_player.cpp
